<?xml version="1.0"?>
<package format="3">
  <name>odin_ros_driver</name>
  <version>0.0.1</version>
  <description>ROS driver for Odin sensor</description>
  <maintainer email="oliveiratang@manifoldtech.cn">rlk</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_lint_auto</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <!-- System dependencies -->
  <depend>eigen</depend>
  <depend>opencv</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
